# distributed-pokedex

./: .gitignore
client/: Pipfile  main.py  mypy.ini
client/model/: pokemon.py  pokemon_type.py  user.py
client/network/: client.py  message.py  result.py
client/proxy/: authenticator.py  pokedex.py
client/services/: authenticator.py  id_handler.py  pokedex.py
client/util/: id_handler.py  proxy.py  singleton.py  terminal.py
server/: Cargo.toml
server/pokedex-macros/: Cargo.toml
server/pokedex-server/: Cargo.toml
server/pokedex-server/src/: main.rs
server/pokedex-server/src/model/: mod.rs  user.rs
server/pokedex_macros/: Cargo.toml
server/pokedex_macros/src/: data.rs  lib.rs  util.rs
server/pokedex_server/: Cargo.toml
server/pokedex_server/src/: database.rs  lib.rs  main.rs
server/pokedex_server/src/model/: mod.rs  pokemon.rs  pokemon_type.rs  user.rs
server/pokedex_server/src/network/: dispatcher.rs  message.rs  mod.rs  result.rs  server.rs
server/pokedex_server/src/services/: authenticator.rs  mod.rs  pokedex.rs
