[package]
name = "pokedex_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
lazy_static = "1.4.0"
pokedex_macros = { path = "../pokedex_macros"}
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sqlite3 = "0.24.0"
